# FastApiDemo

./: .gitignore  README.md  items_views.py  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py
users/: views.py
